# agentic-kali

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
debian/DEBIAN/: config  control  postinst  postrm  prerm  templates
distro-build/: README-build.md  README.md  build-deb.sh  build-iso.sh  install-agent.sh  live-build-notes.md  packages.txt
distro-build/systemd/: agentic-kali-gui.desktop  agentic-kali-ui.service  agentic-kali.service
examples/: config.azure.json  scope.lab.json  scope.local.json
src/agentic_kali/: cli.py  config.py  setup.py
src/agentic_kali.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agentic_kali/ai/: chat.py  commands.py  planner.py  provider.py  request.py
src/agentic_kali/core/: orchestrator.py  planner.py
src/agentic_kali/desktop/: apps.py  browser.py  builder.py  controller.py  lab.py  watch.py
src/agentic_kali/evidence/: store.py
tests/: test_admin.py  test_apps.py  test_azure_provider.py  test_browser.py  test_builder.py  test_capabilities.py  test_catalog.py  test_chat.py  test_chat_system_prompt.py  test_commands.py  test_config.py  test_debian_scripts.py  test_distro_files.py  test_evidence.py  test_gui_helpers.py  test_history.py  test_lab.py  test_parsers.py  test_planner.py  test_policy.py  test_provider.py  test_reporting.py  test_request.py  test_request_intent.py  test_safe_actions.py  test_security_settings.py  test_setup.py  test_severity.py  test_targets.py  test_watch_mode.py
(+20 files in other folders)
