[project]
name = "agentic-kali"
version = "0.1.0"
description = "Authorized AI-assisted penetration testing orchestration skeleton"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "fastapi>=0.111",
  "uvicorn>=0.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2"
]

[project.scripts]
agentic-kali = "agentic_kali.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
